--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src="http://via.placeholder.com/150x150" class="profile__portrait" alt="Edward Kane Portrait">
       <h1>Hello there!</h1>
       <p>My name is Edward Kane. I am a <span>web</span> developer from Connecticut.</p>
-      <a href="work.html">Check out some of my projects</a>
+      <a href="work.html">Check out some of my work</a>
       <br><br>
     </div>
     <footer class="page-footer">
