--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="page-header">
       <!-- add your logo here -->
-      <img src="http://via.placeholder.com/200x70" alt="logo" class="page-header__item">
+      <img src="img/logo.png" alt="logo" class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
