--- a/about.html
+++ b/about.html
@@ -12,8 +12,7 @@
   </head
   <body>
     <header class="page-header">
-      <!-- add your logo here -->
-      <img src="http://via.placeholder.com/200x70" alt="logo" class="page-header__item">
+      <img src="img/logo.png" alt="logo" class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
