--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       </nav>
     </header>
     <div class="profile">
-      <!-- add your photo here -->
-      <img src="http://via.placeholder.com/150x150" class="profile__portrait" alt="Edward Kane Portrait">
+      <img src="img/portrait.jpg" class="profile__portrait" alt="Edward Kane Portrait">
       <h1>Hello there!</h1>
       <p>My name is Edward Kane. I am a <span>web</span> developer from Connecticut.</p>
       <a href="work.html">Check out some of my work</a>
