--- a/work.html
+++ b/work.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Projects by Edward</title>
     <link rel="shortcut icon" href="img/favicon.ico">
