--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="page-header">
-      <img src="img/logo.png" alt="logo" class="page-header__item">
+      <img src="img/large-logo.png" alt="logo" class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
