--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-  </head
+  </head>
   <body>
     <header class="page-header">
       <img src="img/large-logo.png" alt="logo" class="page-header__item">
