--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
       <p>Find me on</p>
       <div class="social-media">
         <!-- Github logo -->
-        <img src="img/github_icon.svg" alt="github">
+        <a href="https://github.com/nyaliss19"><img src="img/github_icon.svg" alt="github"></a>
         <!-- Twitter logo -->
         <img src="img/twitter_icon.svg" alt="twitter">
         <!-- LinkedIn logo -->
